# mbed-os

connectivity/drivers/mbedtls/TARGET_STM/TARGET_STM32L4A6xG/: mbedtls_device.h
targets/: cmsis_mcu_descriptions.json5  targets.json5
targets/TARGET_STM/TARGET_STM32L4/: CMakeLists.txt
targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L4A6xG/: CMakeLists.txt  system_clock.c
targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L4A6xG/TARGET_NUCLEO_L4A6ZG/: CMakeLists.txt  PeripheralPins.c  PinNames.h
targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L4A6xG/TARGET_STM32L4A6VG/: CMakeLists.txt  PeripheralPins.c  PinNames.h
targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L4A6xG/TOOLCHAIN_GCC_ARM/: startup_stm32l4a6xx.S
targets/TARGET_STM/TARGET_STM32L4/linker_scripts/: CMakeLists.txt
targets/upload_method_cfg/: NUCLEO_L476RG.cmake  NUCLEO_L4A6ZG.cmake
